# langchain-learn

./: Taskfile.yml  compose.yml
api/: Dockerfile  Taskfile.yml  pyproject.toml
api/app/: main.py  test_main.py
api/app/routers/: task.py
app/: main.py
mysql/: Dockerfile
